--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="grid-1-3 produto">Teste1</div>
-    <div class="grid-1-3 produto">Teste2</div>
-    <div class="grid-1-3 produto">Teste2</div>
-  </div>
-  <div class="container produto2">
-    <div class="grid-10 produto">Teste1</div>
-    <div class="grid-6 produto">Teste2</div>
-  </div>
+  <header class="header">
+    <div class="container">
+      <a href="index.html" class="grid-4">
+        <img src="img/bikcraft.svg" alt="Bikcraft">
+      </a>
+      <nav class="grid-12 header_menu">
+        <ul>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="portfolio.html">Portfólio</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
