--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
       </nav>
     </div>
   </header>
+  <section class="introducao">
+    <div class="container">
+      <h1>Bicicletas feitas a mão</h1>
+      <blockquote class="quote-externo">
+        <p>"Não tenha nada em sua casa que você
+          não considere bonito ou útil."
+        </p>
+        <cite>William Shape</cite>
+      </blockquote>
+      <a class="btn" href="produtos.html">Orçamento</a>
+    </div>
+  </section>
 </body>
 
 </html>
