--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </nav>
     </div>
   </header>
+
   <section class="introducao">
     <div class="container">
       <h1>Bicicletas feitas a mão</h1>
@@ -38,6 +39,38 @@
       <a class="btn" href="produtos.html">Orçamento</a>
     </div>
   </section>
+
+  <section class="produtos container">
+    <h2 class="subtitulo">Produtos</h2>
+    <ul class="produtos_lista">
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/passeio.svg" alt="Bikcraft passeio">
+        </div>
+        <h3>Passeio</h3>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria.</p>
+      </li>
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/esporte.svg" alt="Bikcraft passeio">
+        </div>
+        <h3>Passeio</h3>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria.</p>
+      </li>
+      <li class="grid-1-3">
+        <div class="produtos_icone">
+          <img src="img/produtos/retro.svg" alt="Bikcraft passeio">
+        </div>
+        <h3>Passeio</h3>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria.</p>
+      </li>
+    </ul>
+    <div class="call">
+      <p>Clique aqui e veja mais detalhes</p>
+      <a href="produtos.html" class="btn btn-preto">Produtos</a>
+    </div>
+  </section>
+
 </body>
 
 </html>
