--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
       <a href="produtos.html" class="btn btn-preto">Produtos</a>
     </div>
   </section>
+  <!-- fecha produtos -->
+  <section class="portfolio">
+    <div class="container">
+      <h2 class="subtitulo">Portfólio</h2>
+      <ul class="portfolio_lista">
+        <li class="grid-8">
+          <img src="img/portfolio/retro.jpg" alt="Retro">
+        </li>
+        <li class="grid-8">
+          <img src="img/portfolio/passeio.jpg" alt="Retro">
+        </li>
+        <li class="grid-16">
+          <img src="img/portfolio/esporte.jpg" alt="Retro">
+        </li>
+      </ul>
+      <div class="call">
+        <p>Conheça mais o nosso Portfólio</p>
+        <a href="portfolio.html" class="btn">Portfólio</a>
+      </div>
+    </div>
+  </section>
 
 </body>
 
