--- a/index.html
+++ b/index.html
@@ -79,16 +79,38 @@
           <img src="img/portfolio/retro.jpg" alt="Retro">
         </li>
         <li class="grid-8">
-          <img src="img/portfolio/passeio.jpg" alt="Retro">
+          <img src="img/portfolio/passeio.jpg" alt="Passeio">
         </li>
         <li class="grid-16">
-          <img src="img/portfolio/esporte.jpg" alt="Retro">
+          <img src="img/portfolio/esporte.jpg" alt="Esporte">
         </li>
       </ul>
       <div class="call">
         <p>Conheça mais o nosso Portfólio</p>
         <a href="portfolio.html" class="btn">Portfólio</a>
       </div>
+    </div>
+  </section>
+  <section class="qualidade container">
+    <h2 class="subtitulo">Qualidade</h2>
+    <img src="img/bikcraft-qualidade.svg" alt="Bikcraft">
+    <ul class="qualidade_lista">
+      <li class="grid-1-3">
+        <h3>Durabilidade</h3>
+        <p>A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim </p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Design</h3>
+        <p>A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim </p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Sustentabilidade</h3>
+        <p>A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim A expressão Lorem ipsum em design gráfico e editoração é um texto padrão em latim </p>
+      </li>
+    </ul>
+    <div class="call">
+      <p>Conheça mais o nossa História</p>
+      <a href="sobre.html" class="btn btn-preto">Sobre</a>
     </div>
   </section>
 
