--- a/index.html
+++ b/index.html
@@ -109,11 +109,56 @@
       </li>
     </ul>
     <div class="call">
-      <p>Conheça mais o nossa História</p>
+      <p>Conheça mais a nossa História</p>
       <a href="sobre.html" class="btn btn-preto">Sobre</a>
     </div>
   </section>
-
+  <section class="quebra">
+    <blockquote class="quote-externo container">
+      <p>"O verdadeiro segredo da felicidade está em ter
+        genuíno interesse nos detalhes da vida cotidiana."
+      </p>
+      <cite>William Morris</cite>
+    </blockquote>
+  </section>
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="grid-8 footer_historia">
+          <h3>Nossa História</h3>
+          <p>O verdadeiro segredo da felicidade está em ter
+            genuíno interesse nos detalhes da vida cotidiana. genuíno interesse nos detalhes da vida cotidiana.</p>
+        </div>
+        <div class="grid-4 footer_contato">
+          <h3>Contato</h3>
+          <ul>
+            <li>- 11 999999999</li>
+            <li>- contato@bikcraft.com</li>
+            <li>- Martins Soares</li>
+          </ul>
+        </div>
+        <div class="grid-4 footer_redes">
+          <h3>Redes Sociais</h3>
+          <ul>
+            <li>
+              <a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="Facebook"></a>
+            </li>
+            <li>
+              <a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="Instagram"></a>
+            </li>
+            <li>
+              <a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="Twiiter"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="copy">
+      <div class="container">
+        <p class="grid-16">Bikcraft 2021 - Alguns direitos reservados</p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
