--- a/produtos.html
+++ b/produtos.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/portfolio.css">
-  <title>Bikcraft - Portfólio</title>
+  <link rel="stylesheet" href="css/produtos.css">
+  <title>Bikcraft - Produtos</title>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
       <nav class="grid-12 header_menu">
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="portfolio.html" class="menu_ativo">Portfólio</a></li>
+          <li><a href="produtos.html" class="menu_ativo">Produtos</a></li>
+          <li><a href="portfolio.html">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
@@ -30,33 +30,84 @@
 
   <section class="introducao-interna interna_produtos">
     <div class="container">
-      <h1>Portfólio</h1>
-      <p>Conheça nossos produtos</p>
+      <h1>Produtos</h1>
+      <p>Conheça mais nossos produtos</p>
     </div>
   </section>
-  <section class="container">
-    <blockquote class="quote-externo preto">
-      <p>"No mundo atual a contínua busca por desenvolvimento nos levará
-        a ruína, aproveite os dias em paz junto de sua bike."
+
+  <section class="container produto_item">
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Passeio">
+      <h2>Passeio</h2>
+    </div>
+    <div class="grid-5 produto_icone">
+      <img src="img/produtos/passeio.svg" alt="Icone passeio">
+    </div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-passeio-2.jpg" alt="">
+    </div>
+    <div class="grid-8 produto_info">
+      <p>O verdadeiro segredo da felicidade está em ter
+        genuíno interesse nos detalhes da vida cotidiana.
       </p>
-      <cite>William Shape</cite>
-    </blockquote>
-  </section>
-
-
-  <section class="produtos">
-    <div class="container">
-      <div class="grid-8">
-        <img src="img/portfolio/retro.jpg" alt="">
-      </div>
-      <div class="grid-8">
-        <img src="img/portfolio/passeio.jpg" alt="">
-      </div>
-      <div class="grid-16">
-        <img src="img/portfolio/esporte.jpg" alt="">
-      </div>
+      <ul>
+        <li>conforto</li>
+        <li>velocidade</li>
+        <li>design</li>
+        <li>sutentabilidade</li>
+      </ul>
     </div>
   </section>
+
+  <section class="container produto_item">
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-esporte-1.jpg" alt="Passeio">
+      <h2>Esporte</h2>
+    </div>
+    <div class="grid-5 produto_icone">
+      <img src="img/produtos/esporte.svg" alt="Icone passeio">
+    </div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-esporte-2.jpg" alt="">
+    </div>
+    <div class="grid-8 produto_info">
+      <p>O verdadeiro segredo da felicidade está em ter
+        genuíno interesse nos detalhes da vida cotidiana.
+      </p>
+      <ul>
+        <li>conforto</li>
+        <li>velocidade</li>
+        <li>design</li>
+        <li>sutentabilidade</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="container produto_item">
+    <div class="grid-11">
+      <img src="img/produtos/bikcraft-retro-1.jpg" alt="Passeio">
+      <h2>Retro</h2>
+    </div>
+    <div class="grid-5 produto_icone">
+      <img src="img/produtos/retro.svg" alt="Icone passeio">
+    </div>
+    <div class="grid-8">
+      <img src="img/produtos/bikcraft-retro-2.jpg" alt="">
+    </div>
+    <div class="grid-8 produto_info">
+      <p>O verdadeiro segredo da felicidade está em ter
+        genuíno interesse nos detalhes da vida cotidiana.
+      </p>
+      <ul>
+        <li>conforto</li>
+        <li>velocidade</li>
+        <li>design</li>
+        <li>sutentabilidade</li>
+      </ul>
+    </div>
+  </section>
+
+
 
   <section class="quebra">
     <blockquote class="quote-externo container">
