contato css ajustes

--- a/contato.html
+++ b/contato.html
@@ -45,13 +45,13 @@
       <input type="text" id="telefone">
       <label for="espec">Especificações</label>
       <textarea id="espec"></textarea>
-      <button class="btn" type="submit">Enviar</button>
+      <button class="btn btn-preto" type="submit">Enviar</button>
     </form>
     <div class="contato_dados grid-8">
       <h3>Dados</h3>
       <p>+55 99999999</p>
-      <p class="dados_email">orcamento@bikcraft.com</p>
-      <p>Martins Soares - ES</p>
+      <p>orcamento@bikcraft.com</p>
+      <p>Rua Vaca Preta - Martins Soares</p>
       <p>Espirito Santo - Brasil</p>
       <div class="contato_redes">
         <h3>Redes Sociais</h3>
@@ -72,9 +72,17 @@
 
   <section class="container endereco">
     <div class="grid-16">
-      <img src="img/endereco-bikcraft.jpg" alt="">
-
+      <a href="http://google.com" target="_blank"><img src="img/endereco-bikcraft.jpg" alt=""></a>
     </div>
+  </section>
+
+  <section class="quebra">
+    <blockquote class="quote-externo container">
+      <p>"O verdadeiro segredo da felicidade está em ter
+        genuíno interesse nos detalhes da vida cotidiana."
+      </p>
+      <cite>William Morris</cite>
+    </blockquote>
   </section>
 
   <footer>
