--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
     </div>
   </section>
   <section class="container">
-    <blockquote class="quote-externo preto">
+    <blockquote class="quote_cliente">
       <p>"No mundo atual a contínua busca por desenvolvimento nos levará
         a ruína, aproveite os dias em paz junto de sua bike."
       </p>
-      <cite>William Shape</cite>
+      <cite>- William Shape</cite>
     </blockquote>
   </section>
 
