--- a/produtos.html
+++ b/produtos.html
@@ -124,7 +124,7 @@
       <div class="orcamento_dados grid-8">
         <h3>Dados</h3>
         <span>+55 99999999</span>
-        <span class="dados_email">orcamento@bikcraft.com</span>
+        <span>orcamento@bikcraft.com</span>
         <h3>MONTE A SUA BIKCRAFT</h3>
         <p>Escolha as especificações:</p>
         <ul>
