--- a/produtos.html
+++ b/produtos.html
@@ -55,7 +55,7 @@
         <li>conforto</li>
         <li>velocidade</li>
         <li>design</li>
-        <li>sutentabilidade</li>
+        <li>versatilidade</li>
       </ul>
     </div>
   </section>
@@ -79,7 +79,7 @@
         <li>conforto</li>
         <li>velocidade</li>
         <li>design</li>
-        <li>sutentabilidade</li>
+        <li>versatilidade</li>
       </ul>
     </div>
   </section>
@@ -103,7 +103,7 @@
         <li>conforto</li>
         <li>velocidade</li>
         <li>design</li>
-        <li>sutentabilidade</li>
+        <li>versatilidade</li>
       </ul>
     </div>
   </section>
