--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Bikcraft</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsivo.css">
-  <title>Bikcraft</title>
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
+
   <header class="header">
     <div class="container">
       <a href="index.html" class="grid-4">
@@ -160,6 +162,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
