--- a/contato.html
+++ b/contato.html
@@ -32,12 +32,12 @@
 
   <section class="introducao-interna interna_contato">
     <div class="container">
-      <h1>Contato</h1>
-      <p>Entre em contato</p>
+      <h1 data-anime="400" class="fadeInDown">Contato</h1>
+      <p data-anime="800" class="fadeInDown">Entre em contato</p>
     </div>
   </section>
 
-  <section class="container">
+  <section class="container fadeInDown" data-anime="1200">
     <form class="form grid-8" id="form-contato">
       <label for="nome">Nome</label>
       <input type="text" id="nome">
@@ -125,7 +125,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="js/simple-anime.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
