--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
   <section class="introducao">
     <div class="container">
-      <h1>Bicicletas feitas a mão</h1>
-      <blockquote class="quote-externo">
+      <h1 data-anime="400" class="fadeInDown">Bicicletas feitas a mão</h1>
+      <blockquote data-anime="800" class="quote-externo fadeInDown">
         <p>"Não tenha nada em sua casa que você
           não considere bonito ou útil."
         </p>
         <cite>William Shape</cite>
       </blockquote>
-      <a class="btn" href="produtos.html">Orçamento</a>
+      <a data-anime="1200" class="btn" href="produtos.html">Orçamento</a>
     </div>
   </section>
 
-  <section class="produtos container">
+  <section data-anime="1600" class="produtos container fadeInDown">
     <h2 class="subtitulo">Produtos</h2>
     <ul class="produtos_lista">
       <li class="grid-1-3">
@@ -162,6 +162,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
