--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,11 @@
 
   <section class="introducao-interna interna_produtos">
     <div class="container">
-      <h1>Portfólio</h1>
-      <p>Conheça nossos produtos</p>
+      <h1 data-anime="400" class="fadeInDown">Portfólio</h1>
+      <p data-anime="800" class="fadeInDown">Conheça nossos produtos</p>
     </div>
   </section>
-  <section class="container" data-slide="quote">
+  <section class="container fadeInDown" data-slide="quote" data-anime="1200">
     <blockquote class="quote_cliente">
       <p>"No mundo atual a contínua busca por desenvolvimento nos levará
         a ruína, aproveite os dias em paz junto de sua bike."
@@ -130,6 +130,7 @@
     </div>
   </footer>
   <script src="js/simple-slide.js"></script>
+  <script src="js/simple-anime.js"></script>
   <script src="js/script.js"></script>
 </body>
 
