--- a/sobre.html
+++ b/sobre.html
@@ -32,11 +32,11 @@
 
   <section class="introducao-interna interna_sobre">
     <div class="container">
-      <h1>Sobre</h1>
-      <p>Conheça mais sobre a bikcraft</p>
+      <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+      <p data-anime="800" class="fadeInDown">Conheça mais sobre a bikcraft</p>
     </div>
   </section>
-  <section class="missao_sobre container">
+  <section class="missao_sobre container fadeInDown" data-anime="1200">
     <div class="grid-10">
       <h2 class="subtitulo-interno">História, missão e visão</h2>
       <p>O verdadeiro segredo da felicidade está em ter
@@ -129,6 +129,8 @@
       </div>
     </div>
   </footer>
+  <script src="js/simple-anime.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
