--- a/produtos.html
+++ b/produtos.html
@@ -3,6 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Bikcraft - Conheça nossos produtos</title>
+  <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô.">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bikcraft - Nossos Produtos" />
+  <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô." />
+  <meta property="og:url" content="http://bikcraft.com/produtos.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
@@ -10,7 +21,6 @@
   <link rel="stylesheet" href="css/produtos.css">
   <link rel="stylesheet" href="css/responsivo.css">
   <script>document.documentElement.classList.add("js");</script>
-  <title>Bikcraft - Produtos</title>
 </head>
 
 <body>
@@ -39,14 +49,14 @@
 
   <section class="container produto_item fadeInDown" data-anime="1200">
     <div class="grid-11">
-      <img src="img/produtos/bikcraft-passeio-1.jpg" alt="Passeio">
+      <img src="img/produtos/bikcraft-passeio-1.jpg" alt="imagem passeio">
       <h2>Passeio</h2>
     </div>
     <div class="grid-5 produto_icone">
       <img src="img/produtos/passeio.svg" alt="Icone passeio">
     </div>
     <div class="grid-8">
-      <img src="img/produtos/bikcraft-passeio-2.jpg" alt="">
+      <img src="img/produtos/bikcraft-passeio-2.jpg" alt="imagem passeio">
     </div>
     <div class="grid-8 produto_info">
       <p>O verdadeiro segredo da felicidade está em ter
@@ -63,14 +73,14 @@
 
   <section class="container produto_item">
     <div class="grid-11">
-      <img src="img/produtos/bikcraft-esporte-1.jpg" alt="Passeio">
+      <img src="img/produtos/bikcraft-esporte-1.jpg" alt="imagem esporte">
       <h2>Esporte</h2>
     </div>
     <div class="grid-5 produto_icone">
-      <img src="img/produtos/esporte.svg" alt="Icone passeio">
+      <img src="img/produtos/esporte.svg" alt="Icone esporte">
     </div>
     <div class="grid-8">
-      <img src="img/produtos/bikcraft-esporte-2.jpg" alt="">
+      <img src="img/produtos/bikcraft-esporte-2.jpg" alt="imagem esporte">
     </div>
     <div class="grid-8 produto_info">
       <p>O verdadeiro segredo da felicidade está em ter
@@ -87,14 +97,14 @@
 
   <section class="container produto_item">
     <div class="grid-11">
-      <img src="img/produtos/bikcraft-retro-1.jpg" alt="Passeio">
+      <img src="img/produtos/bikcraft-retro-1.jpg" alt="imagem retrô">
       <h2>Retro</h2>
     </div>
     <div class="grid-5 produto_icone">
-      <img src="img/produtos/retro.svg" alt="Icone passeio">
+      <img src="img/produtos/retro.svg" alt="Icone retrô">
     </div>
     <div class="grid-8">
-      <img src="img/produtos/bikcraft-retro-2.jpg" alt="">
+      <img src="img/produtos/bikcraft-retro-2.jpg" alt="imagem retrô">
     </div>
     <div class="grid-8 produto_info">
       <p>O verdadeiro segredo da felicidade está em ter
@@ -144,14 +154,14 @@
     </div>
   </section>
 
-  <section class="quebra">
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"O verdadeiro segredo da felicidade está em ter
         genuíno interesse nos detalhes da vida cotidiana."
       </p>
       <cite>William Morris</cite>
     </blockquote>
-  </section>
+  </div>
   <footer>
     <div class="footer">
       <div class="container">
