--- a/contato.html
+++ b/contato.html
@@ -3,6 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Bikcraft - Contato - 27 9999999999</title>
+  <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô.">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bikcraft -  Contato - 27 9999999999" />
+  <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô." />
+  <meta property="og:url" content="http://bikcraft.com/contato.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
@@ -10,7 +21,6 @@
   <link rel="stylesheet" href="css/contato.css">
   <link rel="stylesheet" href="css/responsivo.css">
   <script>document.documentElement.classList.add("js");</script>
-  <title>Bikcraft - Contato</title>
 </head>
 
 <body>
@@ -84,14 +94,14 @@
     </div>
   </section>
 
-  <section class="quebra">
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"O verdadeiro segredo da felicidade está em ter
         genuíno interesse nos detalhes da vida cotidiana."
       </p>
       <cite>William Morris</cite>
     </blockquote>
-  </section>
+  </div>
 
   <footer>
     <div class="footer">
