--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Bikcraft - Sobre</title>
+  <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô.">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bikcraft - Nossa História" />
+  <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Temos modelos para passeio, esporte e retrô." />
+  <meta property="og:url" content="http://bikcraft.com/sobre.html" />
+  <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/grid.css">
@@ -10,7 +21,6 @@
   <link rel="stylesheet" href="css/sobre.css">
   <link rel="stylesheet" href="css/responsivo.css">
   <script>document.documentElement.classList.add("js");</script>
-  <title>Bikcraft - Sobre</title>
 </head>
 
 <body>
@@ -83,14 +93,14 @@
       </li>
     </ul>
   </section>
-  <section class="quebra">
+  <div class="quebra">
     <blockquote class="quote-externo container">
       <p>"O verdadeiro segredo da felicidade está em ter
         genuíno interesse nos detalhes da vida cotidiana."
       </p>
       <cite>William Morris</cite>
     </blockquote>
-  </section>
+  </div>
   <footer>
     <div class="footer">
       <div class="container">
